--- a/final_project/art_project/Gemfile
+++ b/final_project/art_project/Gemfile
@@ -9,6 +9,8 @@ gem 'sqlite3'
 gem 'sass-rails', '~> 5.0'
 #To login/log out users.
 gem 'devise','~> 3.5.2'
+#Use Active_Model has_secure_password
+gem 'bcrypt','~> 3.1.7'
 # Use Uglifier as compressor for JavaScript assets
 gem 'uglifier', '>= 1.3.0'
 # Use CoffeeScript for .coffee assets and views
