--- a/final_project/art_project/Gemfile
+++ b/final_project/art_project/Gemfile
@@ -25,6 +25,12 @@ gem 'sdoc', '~> 0.4.0', group: :doc
 
 gem 'devise','~>3.5.2'
 
+#Gem to process images(upload)
+gem 'carrierwave'
+
+#Gem to modify images
+gem "mini_magick",'~>4.3.6'
+
 # Use ActiveModel has_secure_password
 # gem 'bcrypt', '~> 3.1.7'
 
