--- a/final_project/art_project/Gemfile
+++ b/final_project/art_project/Gemfile
@@ -23,6 +23,7 @@ gem 'jbuilder', '~> 2.0'
 # bundle exec rake doc:rails generates the API under doc/api.
 gem 'sdoc', '~> 0.4.0', group: :doc
 
+#To add authentication for users and admin
 gem 'devise','~>3.5.2'
 
 #Gem to process images(upload)
