--- a/final_project/art_project/test/fixtures/events.yml
+++ b/final_project/art_project/test/fixtures/events.yml
@@ -1,3 +1,20 @@
+# == Schema Information
+#
+# Table name: events
+#
+#  id             :integer          not null, primary key
+#  title          :string
+#  location       :string
+#  start_date     :datetime
+#  ends_date      :datetime
+#  image          :string
+#  description    :string
+#  organizer_name :string
+#  event_type     :string
+#  created_at     :datetime         not null
+#  updated_at     :datetime         not null
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
