--- a/final_project/art_project/test/fixtures/posts.yml
+++ b/final_project/art_project/test/fixtures/posts.yml
@@ -1,3 +1,17 @@
+# == Schema Information
+#
+# Table name: posts
+#
+#  id         :integer          not null, primary key
+#  title      :string
+#  image      :string
+#  user_id    :integer
+#  author     :string
+#  content    :string
+#  created_at :datetime         not null
+#  updated_at :datetime         not null
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
