Adding bootstrap to project

--- a/final_project/art_project/Gemfile
+++ b/final_project/art_project/Gemfile
@@ -31,6 +31,8 @@ gem 'carrierwave'
 
 #Gem to modify images
 gem "mini_magick",'~>4.3.6'
+#To convert Less-CSS to Sass.
+gem 'bootstrap-sass','~>3.3.3'
 
 #To authenticate models(what can be used by users and admins)
 # gem 'cancan'
