--- a/final_project/art_project/Gemfile
+++ b/final_project/art_project/Gemfile
@@ -1,6 +1,5 @@
 source 'https://rubygems.org'
 
-
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '4.2.4'
 # Use sqlite3 as the database for Active Record
@@ -26,6 +25,8 @@ gem 'sdoc', '~> 0.4.0', group: :doc
 
 #To add authentication for users and admin
 gem 'devise','~>3.5.2'
+
+gem 'figaro'
 
 #Gem to process images(upload)
 gem 'carrierwave', github: 'carrierwaveuploader/carrierwave'
